--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -10,7 +10,6 @@
         margin: 0;
         padding: 0;
     }
-
     .example-wrapper { 
         margin: 1em auto; 
         max-width: 800px; 
@@ -21,7 +20,10 @@
         border-radius: 10px;
         box-shadow: 0 0 20px rgba(0,0,0,0.1);
     }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    .example-wrapper code { 
+        background: #F5F5F5; 
+        padding: 2px 6px; 
+    }
     .btn{
         margin: 10px;
         padding: 10px 20px;
