--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -137,9 +137,9 @@
                 <a href="{{ path('app_logout') }}" class="btn btn-primary">Logout</a>
                 <a href="{{ path('app_pokemons_mis_pokemons') }}" class="btn btn-primary">Mis Pokemons</a>
                 <a href="{{ path('app_fights_new') }}" class="btn btn-train">Nueva lucha</a>
+                <a href="{{ path('app_fights_index') }}" class="btn btn-primary">Historial de Combates</a>
             {% else %}
                 <a href="{{ path('app_login') }}" class="btn btn-primary">Login</a>
-
                 <a href="{{ path('app_register') }}" class="btn btn-primary">Register</a>
             {% endif %}
         </div>
