--- a/templates/fights/new.html.twig
+++ b/templates/fights/new.html.twig
@@ -32,5 +32,5 @@
         </div>
     </div>
     
-    <a href="{{ path('app_fights_index') }}">Back to list</a>
+    <a href="{{ path('app_main') }}">Back to list</a>
 {% endblock %}
